docs(guides): add 8-week AI Engineer interview prep syllabus with week-by-week pages and sidebar links

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,8 +24,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Update content" icon="pencil">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
+  <Card title="Add new content" icon="add-document">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	</Card>
+	<Card title="Interview Prep (8 Weeks)" icon="roadmap">
+		Read the 8-week AI Engineer interview prep syllabus.
+		<a href="/100-days-ai-engineer/guides/interview-prep/overview">Open the syllabus</a>.
 	</Card>
 	<Card title="Configure your site" icon="setting">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
