docs(guides): consolidate interview prep into single page and optimize for Starlight pages

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -29,7 +29,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	</Card>
 	<Card title="Interview Prep (8 Weeks)" icon="roadmap">
 		Read the 8-week AI Engineer interview prep syllabus.
-		<a href="/100-days-ai-engineer/guides/interview-prep/overview">Open the syllabus</a>.
+		<a href="/guides/interview-prep">Open the syllabus</a>.
 	</Card>
 	<Card title="Configure your site" icon="setting">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
