docs: show interview prep on homepage with overview + links; restore sidebar to Overview + Weeks; remove single-page variant

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,6 +18,40 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
+## 8-Week AI Engineer Interview Prep
+
+This full-time 8-week study plan builds a strong mental map for remote AI Engineer interviews. Each week focuses on a theme with clear goals, connected concepts, recommended materials, practice tasks, and reflection prompts. By the end, you’ll be confident in coding (DSA), system design (including LLM/big-data systems), ML/LLM concepts (RAG, agents, evaluation), data engineering, and behavioral skills. Throughout, note how topics interlink — e.g., data structures underpin system design, and ML fundamentals inform LLM architecture — to reinforce a holistic understanding.
+
+<CardGrid stagger>
+  <Card title="Overview" icon="roadmap" href="/guides/interview-prep/overview">
+    Goals, structure, and how to use the plan.
+  </Card>
+  <Card title="Week 1 — Coding" icon="pencil" href="/guides/interview-prep/week-1">
+    Python DSA foundations, Big-O, easy drills.
+  </Card>
+  <Card title="Week 2 — Algorithms" icon="puzzle" href="/guides/interview-prep/week-2">
+    Trees/graphs/DP, patterns, medium problems.
+  </Card>
+  <Card title="Week 3 — System Design" icon="architecture" href="/guides/interview-prep/week-3">
+    Distributed basics, big data pipelines, queues.
+  </Card>
+  <Card title="Week 4 — ML & LLMs" icon="brain" href="/guides/interview-prep/week-4">
+    Transformers, prompting, RLHF, evaluation.
+  </Card>
+  <Card title="Week 5 — RAG" icon="search" href="/guides/interview-prep/week-5">
+    Embeddings, vector DBs, retrieval + generation.
+  </Card>
+  <Card title="Week 6 — Agents" icon="flow" href="/guides/interview-prep/week-6">
+    Tool use, multi-agent, guardrails, AgentOps.
+  </Card>
+  <Card title="Week 7 — Behavioral" icon="people" href="/guides/interview-prep/week-7">
+    STAR stories, remote collaboration skills.
+  </Card>
+  <Card title="Week 8 — Synthesis" icon="check" href="/guides/interview-prep/week-8">
+    Mocks, mind map, final checklist.
+  </Card>
+</CardGrid>
+
 ## Next steps
 
 <CardGrid stagger>
