docs: replace default landing page with interview prep hub

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,74 +1,43 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: 8-Week AI Engineer Interview Prep
+description: Remote-friendly syllabus covering coding, system design, ML/LLMs, RAG, agents, data engineering, and behavioral prep.
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+Welcome! This handbook is the primary landing page for the 8-week remote AI Engineer interview prep program. Use it as the central hub to understand the flow of the syllabus and jump into any week’s detailed guide.
 
-## 8-Week AI Engineer Interview Prep
+## How This Plan Works
 
-This full-time 8-week study plan builds a strong mental map for remote AI Engineer interviews. Each week focuses on a theme with clear goals, connected concepts, recommended materials, practice tasks, and reflection prompts. By the end, you’ll be confident in coding (DSA), system design (including LLM/big-data systems), ML/LLM concepts (RAG, agents, evaluation), data engineering, and behavioral skills. Throughout, note how topics interlink — e.g., data structures underpin system design, and ML fundamentals inform LLM architecture — to reinforce a holistic understanding.
+- **Duration:** Full-time schedule across 8 weeks.
+- **Structure:** Each week focuses on one or two themes with goals, connected concepts, curated resources, practice tasks, and reflection prompts.
+- **Outcome:** Confidence across DSA, system design (including LLM/big data systems), ML/LLM fundamentals, RAG, agents, data engineering, and behavioral interviews.
+- **Interlinking:** Notice how topics reinforce each other—e.g., data structures power distributed designs, and ML basics inform LLM systems.
 
-<CardGrid stagger>
-  <Card title="Overview" icon="roadmap" href="/guides/interview-prep/overview">
-    Goals, structure, and how to use the plan.
-  </Card>
-  <Card title="Week 1 — Coding" icon="pencil" href="/guides/interview-prep/week-1">
-    Python DSA foundations, Big-O, easy drills.
-  </Card>
-  <Card title="Week 2 — Algorithms" icon="puzzle" href="/guides/interview-prep/week-2">
-    Trees/graphs/DP, patterns, medium problems.
-  </Card>
-  <Card title="Week 3 — System Design" icon="architecture" href="/guides/interview-prep/week-3">
-    Distributed basics, big data pipelines, queues.
-  </Card>
-  <Card title="Week 4 — ML & LLMs" icon="brain" href="/guides/interview-prep/week-4">
-    Transformers, prompting, RLHF, evaluation.
-  </Card>
-  <Card title="Week 5 — RAG" icon="search" href="/guides/interview-prep/week-5">
-    Embeddings, vector DBs, retrieval + generation.
-  </Card>
-  <Card title="Week 6 — Agents" icon="flow" href="/guides/interview-prep/week-6">
-    Tool use, multi-agent, guardrails, AgentOps.
-  </Card>
-  <Card title="Week 7 — Behavioral" icon="people" href="/guides/interview-prep/week-7">
-    STAR stories, remote collaboration skills.
-  </Card>
-  <Card title="Week 8 — Synthesis" icon="check" href="/guides/interview-prep/week-8">
-    Mocks, mind map, final checklist.
-  </Card>
-</CardGrid>
+## Weekly Guides
 
-## Next steps
+| Week | Theme | Highlights |
+| --- | --- | --- |
+| [Week 1 — Coding Fundamentals](./guides/interview-prep/week-1) | Python DSA foundations | Arrays, strings, hash tables, Big-O drills, mini CLI project |
+| [Week 2 — Algorithms & Patterns](./guides/interview-prep/week-2) | Advanced structures & problem patterns | Trees/graphs/heaps, sorting/searching, recursion/DP, pattern recognition |
+| [Week 3 — System Design & Big Data](./guides/interview-prep/week-3) | Distributed fundamentals & pipelines | Load balancing, queues, batch vs streaming, Spark/Kafka deep-dives |
+| [Week 4 — ML & LLM Fundamentals](./guides/interview-prep/week-4) | Theory & core concepts | Transformers/attention, prompting vs fine-tuning, RLHF, evaluation |
+| [Week 5 — Retrieval-Augmented Generation](./guides/interview-prep/week-5) | RAG architecture | Ingestion → embeddings → vector DB → retrieval → generation, evaluation techniques |
+| [Week 6 — AI Agents & Orchestration](./guides/interview-prep/week-6) | Tool-using and multi-agent systems | ReAct, Planner–Executor, guardrails, HITL, AgentOps monitoring |
+| [Week 7 — Behavioral & Remote Skills](./guides/interview-prep/week-7) | STAR storytelling & remote collaboration | Conflict resolution, leadership, async communication, remote best practices |
+| [Week 8 — Synthesis & Mock Interviews](./guides/interview-prep/week-8) | Integration & final prep | Full mocks (coding, design, ML/LLM, behavioral), mind map, final checklist |
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-  <Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Interview Prep (8 Weeks)" icon="roadmap">
-		Read the 8-week AI Engineer interview prep syllabus.
-		<a href="/guides/interview-prep">Open the syllabus</a>.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+## Getting Started
+
+1. Read the **[Overview](./guides/interview-prep/overview)** for mindset, daily cadence, and reflection habits.
+2. Block calendar time for each week’s practice (coding blocks, design sessions, mock interviews).
+3. Track progress in a simple doc or project board; log reflections and gaps weekly.
+4. Join the community (Discord/Slack, if available) to discuss wins, blockers, and share resources.
+
+## Tips for Success
+
+- **Consistency over cramming:** Treat each week as a sprint; keep daily study/reporting cadence.
+- **Explain concepts aloud:** Teaching a solution or concept reinforces retention and improves interview communication.
+- **Link back to experience:** Tie technical work to projects you’ve shipped; build stories for Week 7.
+- **Reflect weekly:** Note wins, struggles, and topics to revisit. Use these notes in Week 8 mocks.
+- **Stay healthy:** Remote prep requires energy—schedule breaks, exercise, and rest.
+
+Let’s get started! Pick the current week below and dive in. Stay accountable, iterate on feedback, and support others in the community as they prepare alongside you.
