docs: enrich landing page with milestones and support guidance

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,6 +20,10 @@ Share progress and insights with others following the plan. Teaching and discuss
 - **Outcome:** Confidence across DSA, system design (including LLM/big data systems), ML/LLM fundamentals, RAG, agents, data engineering, and behavioral interviews.
 - **Interlinking:** Notice how topics reinforce each other—e.g., data structures power distributed designs, and ML basics inform LLM systems.
 
+:::note[Daily cadence]
+Set a daily routine that blends focused study blocks (e.g., 2h coding, 1h systems) with reflection time. Consistency beats cramming.
+:::
+
 ## Weekly Guides
 
 <CardGrid stagger>
@@ -48,6 +52,33 @@ Share progress and insights with others following the plan. Teaching and discuss
     Full-stack mocks, mind map review, and the final interview-day checklist.
   </Card>
 </CardGrid>
+
+:::tip[Bookmark this hub]
+Return here for quick navigation, weekly reminders, and new community prompts.
+:::
+
+## Milestones & Checkpoints
+
+| Week | Milestone | Suggested Check-in |
+| --- | --- | --- |
+| 1 | Finish core Python DSA drills & mini CLI project | Share takeaways and tricky edge cases |
+| 2 | Solve 3–4 medium problems across patterns | Record a problem explanation video or voice note |
+| 3 | Whiteboard a system design + big data pipeline | Review with a peer or mentor for gaps |
+| 4 | Confidently explain Transformers, prompting, RLHF | Create flashcards & quiz yourself |
+| 5 | Draft a RAG architecture and evaluation plan | Discuss trade-offs (vector DB, chunking) in community |
+| 6 | Prototype a tool-using agent or outline one | Document guardrails and failure handling plan |
+| 7 | Finalize 5 STAR stories + remote workflows | Run a mock behavioral interview |
+| 8 | Complete full mock loop (coding, design, ML, behavioral) | Debrief, adjust checklist, rest |
+
+## Support & Accountability
+
+- Join or create a weekly sync (30 minutes) to share wins, blockers, and resources discovered.
+- Keep a living doc for reflections, questions, and solutions—reference it during Week 8 mocks.
+- Pair-program or co-design at least once per week to simulate collaborative interview settings.
+
+:::caution[Protect focus time]
+Block calendar slots and treat them as non-negotiable. Multitasking slows progress and hurts retention.
+:::
 
 ## Getting Started
 
