docs: align naming and descriptions with 100-day sprint plan

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: AI Engineer Interview Prep Sprints
-description: Remote-friendly syllabus organized into ten sprints covering coding, system design, ML/LLMs, RAG, agents, data engineering, and interview mastery.
+title: 100-Day AI Engineer Interview Prep
+description: Remote-friendly 100-day syllabus organized into ten sprints covering coding, system design, ML/LLMs, RAG, agents, data engineering, and interview mastery.
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
