--- a/src/content/docs/zh/index.mdx
+++ b/src/content/docs/zh/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: AI 工程师面试冲刺计划
-description: 以十个冲刺为单位的远程友好备考路线，覆盖算法、系统设计、LLM、RAG、Agent、数据工程与面试掌控。
+title: 100 天 AI 工程师面试计划
+description: 以十个冲刺完成 100 天备考，覆盖算法、系统设计、LLM、RAG、Agent、数据工程与面试掌控。
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
